// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > should render 1`] = `
<div>
  <button
    class="junipero button"
    role="button"
  >
    Click me
  </button>
</div>
`;

exports[`<Button /> > should render with custom role 1`] = `
<div>
  <button
    class="junipero button"
    role="link"
  >
    Click me
  </button>
</div>
`;
